force-app/main/default/objects/Flow_Tab_Setting__c/fields/API_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Object_Name__c</fullName>
    <label>API Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>