force-app/main/default/objects/Flow_Tab_Setting__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FMS</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CloWTM-EBooking &amp; Cargo Tracking Module</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CloCRM-Cust/Ptnr/Vendor Relationship and Pricing Module</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>CloCRM-Quotation &amp; Contract</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CloFMS-Forwarding System</label>
            </value>
            <value>
                <fullName>CloSMS-Ship System</fullName>
            </value>
            <value>
                <fullName>CloTOS-Terminal System</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>CloTMS-Transportation System</label>
            </value>
            <value>
                <fullName>TRS</fullName>
                <label>CloTRS-Trading System</label>
            </value>
            <value>
                <fullName>WMS</fullName>
                <label>CloWMS-Warehouse System</label>
            </value>
            <value>
                <fullName>CloIoT</fullName>
                <label>CloIoT-IoT Integration</label>
            </value>
            <value>
                <fullName>INV</fullName>
                <label>CloINV-Inventory Module</label>
            </value>
            <value>
                <fullName>CloAuditModule</fullName>
                <label>CloAudit-Audit/Inventory Check Module</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>CloLog-Logistic Module</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>CloCSM-Consolidation Module</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>CloFIM-JP24H AFR Module</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>CloFCM-Facility Module</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>CloASM-Asset Module</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>CloACM-Accounting Module-FMS/TMS</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>CloACM-Accounting Module-WMS</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>CloACM-Accounting Module-Shared Accounting Service</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>CloACM-Accounting Module-Purchasing/Expenses &amp; Management</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>CloACM-Accounting Module-Transaction</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CloFRM-Financial Report Module</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>CloCha-Chatter Module</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>CloHRM-Human Resource Module</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>CloKPI-KPI Module</label>
            </value>
            <value>
                <fullName>API</fullName>
                <label>CloAPI-API Module for External Integration</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CloSCM Package-Customization</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CloSCM Package-Setup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>