force-app/main/default/objects/Flow_Tab_Setting__c/fields/Flow_Style__c.field-meta.xml
<CustomField>
    <fullName>Flow_Style__c</fullName>
    <label>Flow Style</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>