force-app/main/default/objects/Flow_Tab_Setting__c/fields/Report_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Developer_Name__c</fullName>
    <label>Report Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>