force-app/main/default/objects/Flow_Tab_Setting__c/fields/Tab_Link__c.field-meta.xml
<CustomField>
    <fullName>Tab_Link__c</fullName>
    <label>Tab Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>