force-app/main/default/objects/Flow_Tab_Setting__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <label>Tab Name Default</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>