force-app/main/default/objects/Flow_Tab_Setting__c/fields/Tab_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name_VN__c</fullName>
    <label>Tab Name VietNamese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>