force-app/main/default/objects/Flow_Tab_Setting__c/fields/Tab_Order__c.field-meta.xml
<CustomField>
    <fullName>Tab_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Tab Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>