force-app/main/default/objects/Flow_Tab_Setting__c/fields/Tab_Style__c.field-meta.xml
<CustomField>
    <fullName>Tab_Style__c</fullName>
    <label>Tab Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>User Info</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>View</fullName>
                <isActive>false</isActive>
                <label>View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>