force-app/main/default/objects/Flow_Tab_Setting__c/validationRules/Required_API_Object_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_API_Object_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Tab_Style__c , &apos;Object&apos;) &amp;&amp; ISBLANK(  API_Object_Name__c)</errorConditionFormula>
    <errorDisplayField>API_Object_Name__c</errorDisplayField>
    <errorMessage>API Object Name is required.</errorMessage>
</ValidationRule>