force-app/main/default/objects/Flow_Tab_Setting__c/validationRules/Required_Report_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Report_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Tab_Style__c , &apos;Report&apos;) &amp;&amp; ISBLANK(  Report_Developer_Name__c)</errorConditionFormula>
    <errorDisplayField>Report_Developer_Name__c</errorDisplayField>
    <errorMessage>Report Developer Name is required</errorMessage>
</ValidationRule>