force-app/main/default/objects/Flow_Tab_Setting__c/validationRules/Required_Tab_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Tab_Link</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Tab_Style__c , &apos;Link&apos;) &amp;&amp;  ISBLANK( Tab_Link__c)</errorConditionFormula>
    <errorDisplayField>Tab_Link__c</errorDisplayField>
    <errorMessage>Tab Link is required</errorMessage>
</ValidationRule>